--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.card-body{
+  margin: 10px;
+  padding: 0px;
+}
+
+.card{
+  box-sizing: content-box;
+}
